added edison version and ascii art, updated json config

--- a/configuration/configuration.json
+++ b/configuration/configuration.json
@@ -1,7 +1,12 @@
 {
   "token": "8465cf9a4321b8c6b4a45d376bf13bdca2a854df",
   "URI": "http://192.168.7.2:3029",
-  "ascii_art": "string",
+  "ascii_art": [
+    " ____  ____  ____  ____  ____  ____ ",
+    "||E ||||d ||||i ||||s ||||o ||||n ||",
+    "||__||||__||||__||||__||||__||||__||",
+    "|/__\\||/__\\||/__\\||/__\\||/__\\||/__\\|"
+  ],
   "top_langs": 3,
   "repo_count": true,
   "include_orgs": false,
